--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -6,6 +6,7 @@ all:
 clean:
 	cd lib && $(MAKE) clean
 	cd src && $(MAKE) clean
+	rm -rf autom4te.cache config.log config.status
 
 test:
 	cd lib_test && $(MAKE) test
