add in the password encryption module

--- a/server/lib/Makefile
+++ b/server/lib/Makefile
@@ -2,7 +2,9 @@
 all:
 	cd platform && $(MAKE) all
 	cd schema && $(MAKE) all
+	cd password && $(MAKE) all
 
 clean:
 	cd platform && $(MAKE) clean
 	cd schema && $(MAKE) clean
+	cd password && $(MAKE) clean
