--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -1,10 +1,12 @@
 OCAMLMAKEFILE=../OCamlMakefile
 
+PERSCON_LIBS=platform schema password
+
 SOURCES=config.ml perscon.ml
 THREADS=yes
-PACKS=pcre lwt lwt.extra orm json-static
+PACKS=pcre lwt lwt.extra orm cryptokit json-static
 RESULT=perscon
-INCDIRS=../lib/platform ../lib/schema
+INCDIRS=$(PERSCON_LIBS:%=../lib/%)
 LIBS=platform schema
 ANNOTATE=yes
 
