hook in more of the cohttp layer

--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -2,9 +2,9 @@ OCAMLMAKEFILE=../OCamlMakefile
 
 PERSCON_LIBS=platform schema password
 
-SOURCES=log.ml config.ml perscon.ml
+SOURCES=log.ml config.ml mime.ml dispatch.ml perscon.ml
 THREADS=yes
-PACKS=pcre lwt lwt.extra orm cryptokit json-static ANSITerminal
+PACKS=pcre lwt lwt.extra orm cryptokit json-static ANSITerminal cohttp
 RESULT=perscon
 INCDIRS=$(PERSCON_LIBS:%=../lib/%)
 LIBS=platform schema
