add a TimeDB module to abstract away the splitting of ORM databases, and depend on calendar module

--- a/server/configure.ac
+++ b/server/configure.ac
@@ -69,5 +69,10 @@ if test "$OCAML_PKG_cohttp" = "no"; then
   AC_MSG_ERROR([Please install OCaml findlib module 'cohttp'])
 fi
 
+AC_CHECK_OCAML_PKG([calendar])
+if test "$OCAML_PKG_calendar" = "no"; then
+  AC_MSG_ERROR([Please install OCaml findlib module 'calendar'])
+fi
+
 AC_CONFIG_FILES([ Makefile src/perscon.conf ])
 AC_OUTPUT
