fixes to schema (dont use reserved words) and add a debugging target to makefile

--- a/server/lib/schema/Makefile
+++ b/server/lib/schema/Makefile
@@ -9,4 +9,8 @@ ANNOTATE=yes
 all: dcl dncl
 	@ :
 
+.PHONY: debug
+debug:
+	camlp4orf `ocamlfind query -i-format type-conv orm json-static` pa_type_conv.cmo pa_json_tc.cmo pa_orm.cma schema.ml
+
 -include $(OCAMLMAKEFILE)
