--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -2,7 +2,7 @@ OCAMLMAKEFILE=../OCamlMakefile
 
 PERSCON_LIBS=platform schema password
 
-SOURCES=log.ml config.ml mime.ml db.ml dispatch.ml perscon.ml
+SOURCES=log.ml config.ml db.ml dispatch.ml perscon.ml
 THREADS=yes
 PACKS=pcre lwt lwt.extra orm cryptokit json-static ANSITerminal cohttp calendar
 RESULT=perscon
