--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -2,9 +2,9 @@ OCAMLMAKEFILE=../OCamlMakefile
 
 PERSCON_LIBS=platform schema password
 
-SOURCES=log.ml config.ml db.ml dispatch.ml perscon.ml
+SOURCES=log.ml config.ml crypto.ml db.ml dispatch.ml perscon.ml
 THREADS=yes
-PACKS=pcre lwt lwt.extra orm cryptokit json-static ANSITerminal cohttp calendar
+PACKS=pcre lwt lwt.extra orm cryptokit json-static ANSITerminal cohttp calendar cryptokit
 RESULT=perscon
 INCDIRS=$(PERSCON_LIBS:%=../lib/%)
 LIBS=platform schema
