add in more of the POP3 protocol to authenticate now

--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -2,7 +2,8 @@ OCAMLMAKEFILE=../OCamlMakefile
 
 PERSCON_LIBS=platform schema password
 
-SOURCES=log.ml config.ml crypto.ml db.ml dispatch.ml tcp_server.ml pop3_daemon.ml perscon.ml 
+SOURCES=log.ml config.ml crypto.ml db.ml dispatch.ml tcp_server.ml \
+  pop3_protocol.ml pop3_daemon.ml perscon.ml 
 THREADS=yes
 PACKS=pcre lwt lwt.extra orm cryptokit json-static ANSITerminal cohttp calendar cryptokit
 RESULT=perscon
