--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -2,3 +2,5 @@
 run:
 	cd MacOS-AddressBook && /usr/bin/python sync.py
 	cd iPhone && ./sync.sh
+	cd iPhoto && python sync.py
+	cd Adiums && python sync.py
