--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -3,4 +3,5 @@ run:
 	cd MacOS-AddressBook && /usr/bin/python sync.py
 	cd iPhone && ./sync.sh
 	cd iPhoto && python sync.py
-	cd Adiums && python sync.py
+	cd Adium && python sync.py
+
