perscon: started credentials support

--- a/perscon/perscon.conf
+++ b/perscon/perscon.conf
@@ -1,11 +1,7 @@
-# config file for Personal Container
+;; config file for Personal Container
 
 [network]
 port = 5985
 
 [paths]
 db = perscon.db
-
-[services]
-twitter.com = xxx
-google.com = xxx
