convert to modern ORM and json-tc

--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -1,15 +1,20 @@
 OCAMLMAKEFILE=../OCamlMakefile
 
 PERSCON_LIBS=platform schema password
+INCDIRS=$(PERSCON_LIBS:%=../lib/%)
 
 SOURCES=log.ml config.ml crypto.ml db.ml dispatch.ml tcp_server.ml \
   render.ml pop3_protocol.ml pop3_daemon.ml perscon.ml 
-PACKS=pcre unix lwt lwt.unix  orm cryptokit json-static ANSITerminal cohttp calendar cryptokit
-RESULT=perscon
-INCDIRS=$(PERSCON_LIBS:%=../lib/%)
-LIBS=platform schema
-ANNOTATE=yes
 
+PACKS=pcre unix lwt lwt.unix orm cryptokit json-tc.syntax ANSITerminal cohttp calendar cryptokit
+PACKS+=lwt.syntax
+
+RESULT=perscon
+LIBS=platform schema
+PREDS=camlp4o
+
+
+ANNOTATE=yes
 .PHONY: all
 all: dnc
 	@ :
