convert libraries to newer orm/json-tc

--- a/server/lib/platform/Makefile
+++ b/server/lib/platform/Makefile
@@ -1,7 +1,8 @@
 OCAMLMAKEFILE=../../OCamlMakefile
 
 SOURCES=platform.ml 
-PACKS=lwt
+PACKS=lwt.syntax
+PREDS=camlp4o
 RESULT=platform
 ANNOTATE=yes
 
