--- a/server/lib/schema/Makefile
+++ b/server/lib/schema/Makefile
@@ -1,16 +1,13 @@
 OCAMLMAKEFILE=../../OCamlMakefile
 
 SOURCES=schema.ml 
-PACKS=orm json-static
+PACKS=orm.syntax json-tc.syntax
 RESULT=schema
 ANNOTATE=yes
+PREDS=camlp4o
 
 .PHONY: all
 all: dcl dncl
 	@ :
-
-.PHONY: debug
-debug:
-	camlp4orf `ocamlfind query -i-format type-conv orm json-static` pa_type_conv.cmo pa_json_tc.cmo pa_orm.cma schema.ml
 
 -include $(OCAMLMAKEFILE)
