--- a/appengine/index.yaml
+++ b/appengine/index.yaml
@@ -10,7 +10,8 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-- kind: Gift
+- kind: Message
   properties:
+  - name: origin
   - name: created
     direction: desc
