--- a/appengine/app.yaml.in
+++ b/appengine/app.yaml.in
@@ -9,6 +9,7 @@ handlers:
 
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
+  secure: always
   login: admin
 
 - url: /tasks/.*
