--- a/plugins/MacOS-SyncServices/PersCon.plist
+++ b/plugins/MacOS-SyncServices/PersCon.plist
@@ -41,6 +41,14 @@
             <string>service</string>
             <string>user</string>
         </array>
+        <key>com.apple.contacts.URL</key>
+        <array>
+            <string>com.apple.syncservices.RecordEntityName</string>
+            <string>contact</string>
+            <string>label</string>
+            <string>value</string>
+            <string>type</string>
+        </array>
     </dict>
     <key>PullOnlyEntities</key>
     <array>
