--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,7 +1,11 @@
 .PHONY: run
 run:
-	cd MacOS-AddressBook && /usr/bin/python sync.py
-	cd iPhone && ./sync.sh
-	cd iPhoto && python sync.py
 	cd Adium && python sync.py
+##	cd GDocs && python sync.py
+	cd MacOS-AddressBook && /usr/bin/python sync.py
+	cd MacOS-SyncServices && /usr/bin/python sync.py
+##	cd Picasa && python sync.py
+##	cd Skype && python sync.py
+##	cd iPhone && ./sync.sh
+##	cd iPhoto && python sync.py
 
