--- a/support/Perscon_config.py.in
+++ b/support/Perscon_config.py.in
@@ -1,6 +1,6 @@
-google_username=''
-google_password=''
-app_name=''
-dev_mode=False
-dev_port=8081
-
+mode='appengine'   # or 'perscon'
+google_username='' # for live appengine
+google_password='' # for live appengine
+app_name=''        # for live appengine
+dev_mode=False     # for SDK appengine
+dev_port=8081      # for SDK appengine 
